fix overflowing chat messages and scrolling

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -9,6 +9,7 @@ h2 {
   border: 1px solid #cccccc;
   margin-bottom: 10px;
   padding: 1rem;
+  overflow-y: scroll;
 }
 
 .input-group-addon{
